@@ -2,6 +2,8 @@
 
 MAJOR CHANGES/IMPROVEMENTS
 
+  - The collapse() function was changed to collapse_obs() to avoid namespace clashing with dplyr's collapse().
+
   - The child argument was removed from add_key(). The recycle argument was added to add_key() which allows one to use an existing value in the parent node as a key to connect the parent observation to its descendents (thanks Carlos Scheidegger) 
 
     CHANGES IN XML2R VERSION 0.0.3
